--- a/source/frontend/src/block/AudienceStatistics/AudienceStatistics.scss
+++ b/source/frontend/src/block/AudienceStatistics/AudienceStatistics.scss
@@ -1,2 +1,41 @@
 :local {
+	.audience-statistics {
+		@include size(100%, auto);
+	}
+
+	.image {
+		@include aspect-ratio(16px, 9px);
+		position: relative;
+
+		.description {
+			@include size(75%, auto);
+			@include offset(0, 0);
+			position: absolute;
+			color: $colorWhite;
+			padding: $sizeGrid * 2;
+			box-sizing: border-box;
+		}
+
+		.heading {
+			margin-bottom: $sizeGrid * 0.5;
+		}
+
+		.copy {
+			line-height: 1.7;
+		}
+	}
+
+	.draggable-container {
+		margin-top: $sizeGrid * -7;
+		margin-bottom: $sizeGrid * 2;
+	}
+
+	.items {
+		white-space: nowrap;
+		display: inline-block;
+	}
+
+	.item {
+		@include size(12 * $sizeGrid, 9 * $sizeGrid);
+	}
 }
