--- a/source/frontend/src/block/AudienceStatistics/AudienceStatistics.scss
+++ b/source/frontend/src/block/AudienceStatistics/AudienceStatistics.scss
@@ -38,4 +38,51 @@
 	.item {
 		@include size(12 * $sizeGrid, 9 * $sizeGrid);
 	}
+
+	@include respond-to(MEDIUM) {
+		.draggable-container {
+			margin-top: $sizeGrid * -5;
+		}
+
+		.item {
+			@include size(9 * $sizeGrid, 7 * $sizeGrid);
+		}
+	}
+
+	@include respond-to(SMALL) {
+		.site-frame {
+			padding: 0;
+		}
+
+		.draggable-container {
+			margin-top: $sizeGrid * -5;
+		}
+
+		.image {
+			@include aspect-ratio(640px, 620px);
+			max-height: 320px;
+
+			.description {
+				width: 100%;
+			}
+		}
+
+		.content {
+			padding: 0 $sizeGridMobile * 2;
+		}
+
+		.items {
+			margin-left: -$sizeGrid;
+		}
+
+		.item {
+			@include size(320px, 320px);
+		}
+	}
+
+	@include respond-to(X_SMALL) {
+		.item {
+			@include size(250px, 250px);
+		}
+	}
 }
