Hide the scrollbar if it's not needed

--- a/source/frontend/src/block/AudienceStatistics/AudienceStatisticTeaser/AudienceStatisticTeaser.scss
+++ b/source/frontend/src/block/AudienceStatistics/AudienceStatisticTeaser/AudienceStatisticTeaser.scss
@@ -40,6 +40,10 @@
 		position: absolute;
 	}
 
+	.heading {
+		margin-bottom: $sizeGrid / 4;
+	}
+
 	@include respond-to(SMALL) {
 		.heading {
 			font-size: 15rem;
