--- a/source/frontend/src/asset/style/util/extend/heading.scss
+++ b/source/frontend/src/asset/style/util/extend/heading.scss
@@ -36,6 +36,18 @@
 	}
 }
 
+%heading-03 {
+	font: 700 3.6rem / 1.25 $fontOpenSans;
+
+	strong {
+		font-weight: 700;
+	}
+
+	@include respond-to(SMALL) {
+		font-size: 5rem;
+	}
+}
+
 %heading-04 {
 	font: 700 4rem / 1.25 $fontOpenSans;
 
@@ -53,5 +65,13 @@
 
 	@include respond-to(SMALL) {
 		font-size: 4.5rem;
+	}
+}
+
+%heading-06 {
+	font: 400 3rem / 1.23 $fontOpenSans;
+
+	@include respond-to(SMALL) {
+		font-size: 4rem;
 	}
 }
