Add the persona selector banner

--- a/source/frontend/src/asset/style/asset/link.scss
+++ b/source/frontend/src/asset/style/asset/link.scss
@@ -1,4 +1,5 @@
 @import 'link/link-primary';
 @import 'link/link-secondary';
+@import 'link/link-tertiary';
 @import 'link/link-icon';
 @import 'link/link-chevron';
