--- a/source/frontend/src/block/MainProductNav/MainProductNavItem/MainProductNavItem.scss
+++ b/source/frontend/src/block/MainProductNav/MainProductNavItem/MainProductNavItem.scss
@@ -36,7 +36,7 @@
 	@include respond-to(SMALL) {
 		.heading,
 		.copy {
-			margin-bottom: $sizeGrid / 2;
+			margin-bottom: $sizeGridMobile / 2;
 		}
 
 		.description {
