--- a/source/frontend/src/block/NetworkOverview/NetworkOverview.scss
+++ b/source/frontend/src/block/NetworkOverview/NetworkOverview.scss
@@ -14,6 +14,24 @@
 		margin-bottom: $sizeGrid;
 	}
 
+	.alignment-left {
+		.header {
+			text-align: left;
+		}
+	}
+
+	.alignment-right {
+		.header {
+			text-align: right;
+		}
+	}
+
+	.alignment-center {
+		.header {
+			text-align: center;
+		}
+	}
+
 	.draggable-container {
 		padding: 0;
 	}
