--- a/source/frontend/src/block/SmallInfo/SmallInfo.scss
+++ b/source/frontend/src/block/SmallInfo/SmallInfo.scss
@@ -4,7 +4,7 @@
 	}
 
 	.site-frame {
-		padding: $sizeGrid * 2 $sizeGrid * 5;
+		padding: $sizeGrid $sizeGrid * 5 $sizeGrid * 2;
 	}
 
 	.description {
