--- a/source/frontend/src/block/GlossaryBanner/GlossaryBanner.scss
+++ b/source/frontend/src/block/GlossaryBanner/GlossaryBanner.scss
@@ -1,3 +1,69 @@
 :local {
+	.glossary-banner {
+		color: $colorWhite;
+		text-align: center;
+	}
 
+	.image {
+		@include aspect-ratio(1200px, 440px);
+	}
+
+	.description {
+		width: 100%;
+		padding: 0 20%;
+	}
+
+	.heading {
+		margin-bottom: $sizeGrid;
+	}
+
+	.bottom {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.copy {
+		margin-right: $sizeGrid;
+	}
+
+	@include respond-to(MEDIUM ){
+		.description {
+			padding: 10%;
+		}
+	}
+
+	@include respond-to(SMALL) {
+		.glossary-banner {
+			text-align: left;
+			position: relative;
+		}
+
+		.content {
+			&:after {
+				@include triangle(right, bottom, $colorWhite, mobile-size($sizeGridMobile * 2));
+				@include position(auto, 0, 0, auto);
+				position: absolute;
+				content: '';
+			}
+		}
+
+		.description {
+			padding: $sizeGridMobile * 3;
+		}
+
+		.image {
+			@include aspect-ratio(575px, 636px);
+		}
+
+		.bottom {
+			flex-direction: column;
+			align-items: flex-start;
+		}
+
+		.copy {
+			margin-bottom: $sizeGridMobile;
+			margin-right: 0;
+		}
+	}
 }
