--- a/source/frontend/src/asset/style/screen.scss
+++ b/source/frontend/src/asset/style/screen.scss
@@ -36,6 +36,7 @@ body {
 
 html {
 	overflow: visible;
+	-webkit-font-smoothing: antialiased; // Adds text Anti Aliasing for Webkit/OSX
 }
 
 body {
