Update the transition component dependency Update hte vue-block-system dependency

--- a/source/frontend/src/component/layout/SiteMenu/SiteMenuPage/SiteMenuPage.scss
+++ b/source/frontend/src/component/layout/SiteMenu/SiteMenuPage/SiteMenuPage.scss
@@ -25,7 +25,7 @@
 	}
 
 	.button {
-		font: 2.4rem / 1 $fontOpenSans;
+		font: 400 2.4rem / 1 $fontOpenSans;
 		border: 0;
 		background: transparent;
 		padding: $sizeGrid / 2 0;
