--- a/source/frontend/src/block/FilterContent/FilterContent.scss
+++ b/source/frontend/src/block/FilterContent/FilterContent.scss
@@ -23,6 +23,7 @@
 		@include size(calc(50% - #{$sizeGrid * 2}), auto);
 		display: inline-block;
 		margin: $sizeGrid;
+		box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.08);
 	}
 
 	@include respond-to(MEDIUM) {
