--- a/source/frontend/src/component/button/ButtonQuaternary/ButtonQuaternary.scss
+++ b/source/frontend/src/component/button/ButtonQuaternary/ButtonQuaternary.scss
@@ -4,7 +4,7 @@
 		font: 800 1rem / calc(5rem - 2px) $fontOpenSans;
 		text-transform: uppercase;
 		padding-left: $sizeGridSecondary;
-		align-self: flex-start;
+		//align-self: flex-start; why?
 
 		&.theme-dark {
 			.label {
