--- a/source/frontend/src/block/FilterContent/FilterContent.scss
+++ b/source/frontend/src/block/FilterContent/FilterContent.scss
@@ -1,8 +1,11 @@
 :local {
 	.filter-content {
 		overflow: visible;
-		margin-top: -$sizeGrid * 2;
 		padding-bottom: $sizeGrid;
+
+		&.has-filters {
+			margin-top: -$sizeGrid * 2;
+		}
 	}
 
 	.filter-menu {
