Updated links so you can click through the static site

--- a/source/frontend/src/block/ProductList/ProductTeaser/ProductTeaser.scss
+++ b/source/frontend/src/block/ProductList/ProductTeaser/ProductTeaser.scss
@@ -49,6 +49,10 @@
 	.heading {
 		margin-bottom: $sizeGrid / 2;
 	}
+
+	.button {
+		align-self: flex-start;
+	}
 }
 
 @include hover('.product-teaser') {
