--- a/source/frontend/src/block/HowToAdvertise/HowToAdvertise.scss
+++ b/source/frontend/src/block/HowToAdvertise/HowToAdvertise.scss
@@ -39,6 +39,7 @@
 		cursor: pointer;
 
 		.button {
+			@include size(100%);
 			display: flex;
 			align-items: center;
 		}
@@ -49,6 +50,7 @@
 			display: inline-block;
 			vertical-align: top;
 			border-radius: 100%;
+			flex-shrink: 0;
 			background: $colorLightGrey;
 			transition: background 0.2s $easeInOut;
 			border: 4px solid $colorLightGrey;
