Fixed article teaser block on IE11

--- a/source/frontend/src/block/ArticleTeaser/ArticleTeaser.scss
+++ b/source/frontend/src/block/ArticleTeaser/ArticleTeaser.scss
@@ -17,6 +17,10 @@
 		transition: box-shadow 0.2s $easeInOutCubic;
 	}
 
+	.top {
+		width: 100%;
+	}
+
 	.description {
 		@include offset(0, 0);
 		@include size(60%, 100%);
